@@ -1,3 +1,7 @@
+3 Aug 2009 (svn.debian.org/tux4kids -revision 1349)
+[Sarah Frisk <ssfrisk@gmail.com> }
+	-Worked on removing file function.  Currently doesn't work.
+
 3 Aug 2009 (svn.debian.org/tux4kids - revision 1348)
 [Sarah Frisk <ssfrisk@gmail.com> ]
 	- Fixed drawing issues.  Program now correctly loads Word List Editor Main screen
